fix(index-style): add padding to rooms container hover on rooms make it out of box

--- a/static/index.css
+++ b/static/index.css
@@ -44,6 +44,7 @@ header{
     flex-direction: column; 
     gap: .8rem;
     height: 80vh;
+    padding-top: 5px;
     overflow-y: scroll;
     padding-right: .3rem;
 }
